--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SENDGRID_PASSWORD=Your_Password
 DOMAIN_NAME=example.com
 OMNIAUTH_PROVIDER_KEY: Your_Provider_Key
 OMNIAUTH_PROVIDER_SECRET: Your_Provider_Secret
+ALLOWED_EMAIL_DOMAIN=example.com
