--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DOMAIN_NAME=example.com
 OMNIAUTH_PROVIDER_KEY: Your_Provider_Key
 OMNIAUTH_PROVIDER_SECRET: Your_Provider_Secret
 ALLOWED_EMAIL_DOMAIN=example.com
+SLACK_WEBHOOK_URL=xxx
