--- a/config/sec_config.yml.sample
+++ b/config/sec_config.yml.sample
@@ -5,6 +5,7 @@ development:
   domain_name: 'gapps-domain-name'
   email_provider_password: 'email_provider_password'
   email_provider_username: 'email_provider_username'
+  newrelic_license_key: 'newrelic_license_key'
   omniauth_provider_key: 'omniauth-key'
   omniauth_provider_secret: 'omniauth-secret'
   slack:
