--- a/config/sec_config.yml.sample
+++ b/config/sec_config.yml.sample
@@ -1,8 +1,6 @@
 development:
-  allowed_email_domains:
-    - gmail.com
   app_domain: 'props.dev'
-  domain_name: 'gapps-domain-name'
+  domain_name: 'gapps-domain-name' # leave blank for development in order to use ANY domain
   email_provider_password: 'email_provider_password'
   email_provider_username: 'email_provider_username'
   newrelic_license_key: 'newrelic_license_key'
