--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^0.13.3"
   },
   "dependencies": {
+    "moment": "^2.10.3",
     "react-select": "^0.5.5",
     "react-tools": "^0.13.3"
   },
