use es6 classes

--- a/app/assets/javascripts/components/.eslintrc
+++ b/app/assets/javascripts/components/.eslintrc
@@ -189,6 +189,7 @@
     "react/wrap-multilines": 2,      // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/wrap-multilines.md
     "react/sort-comp": [2, {         // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/sort-comp.md
       "order": [
+        "constructor",
         "displayName",
         "propTypes",
         "contextTypes",
