--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^0.13.3"
   },
   "dependencies": {
+    "alt": "^0.17.1",
+    "camelize": "^1.0.0",
+    "lodash": "^3.10.0",
     "moment": "^2.10.3",
     "react-select": "^0.5.5",
     "react-tools": "^0.13.3"
