--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "camelize": "^1.0.0",
     "lodash": "^3.10.0",
     "moment": "^2.10.3",
-    "react-select": "^0.5.5",
+    "react-select": "git://github.com/jniechcial/react-select#master",
     "react-tools": "^0.13.3"
   },
   "scripts": {
