--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "props",
   "devDependencies": {
+    "babel-core": "^5.8.19",
+    "babel-loader": "^5.3.2",
     "classnames": "^2.1.3",
     "jest-cli": "^0.4.15",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "webpack": "^1.10.5"
   },
   "dependencies": {
     "alt": "^0.17.1",
